The game works in console now it's left winning logic before DOM

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="board" id="game-board"></div>
+  <!-- <div class="container-one">
+    <div class="first-player" id="first-player"></div>
+  </div> -->
+  <div class="container">
+  <div class="turn" id="turn">
+  </div>
+  <div class="board" id="game-board">
+  </div>
+</div>
+<!-- <div class="contaner-two">
+  <div class="second-player" id="second-player"></div>
+</div> -->
 </body>
 </html>
